--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,16 @@
+# Vào MongoDB
 DB_URL = "mongodb://127.0.0.1:27017/banK"
-ADMIN_EMAIL = khoatran004@gmail.com
-ADMIN_EMAIL_PASSWORD = qcdnftkkklbbsyje
 
-JWT_SECRET = qcdnftkkklbbsyje
+# Vào myaccount.google.com → Security → App passwords → tạo mã
+ADMIN_EMAIL = #khoatran004@gmail.com
+ADMIN_EMAIL_PASSWORD = #qcdnftkkklbbsyje
 
+# App passwords
+JWT_SECRET = #qcdnftkkklbbsyje
 
-MAIL_USER=khoatran004@gmail.com
-MAIL_PASS=qcdnftkkklbbsyje
+# Tương tự
+MAIL_USER= #khoatran004@gmail.com
+MAIL_PASS= #qcdnftkkklbbsyje
 
-GEMINI_API_KEY=AIzaSyD_706qXmDQTRVN0ybZEEc6pHHWttvvaQ4
+# Vào aistudio.google.com để lấy key
+GEMINI_API_KEY= #AIzaSyDZ4t8ynVWWx5rSZc4SvY6HgEuI2RfL-6Y
