Sua Dashboard chung voi Dashboard cua customer

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.2.0",
     "react-draggable": "^4.5.0",
     "react-router-dom": "^7.10.1",
+    "recharts": "^3.6.0",
     "sweetalert": "^2.1.2",
     "swr": "^2.3.7",
     "tailwindcss": "^4.1.17",
