--- a/backend/.env
+++ b/backend/.env
@@ -2,15 +2,15 @@
 DB_URL = "mongodb://127.0.0.1:27017/banK"
 
 # Vào myaccount.google.com → Security → App passwords → tạo mã
-ADMIN_EMAIL = #khoatran004@gmail.com
-ADMIN_EMAIL_PASSWORD = #qcdnftkkklbbsyje
+ADMIN_EMAIL = khoatran004@gmail.com
+ADMIN_EMAIL_PASSWORD = qcdnftkkklbbsyje
 
 # App passwords
-JWT_SECRET = #qcdnftkkklbbsyje
+JWT_SECRET = qcdnftkkklbbsyje
 
 # Tương tự
-MAIL_USER= #khoatran004@gmail.com
-MAIL_PASS= #qcdnftkkklbbsyje
+MAIL_USER= khoatran004@gmail.com
+MAIL_PASS= qcdnftkkklbbsyje
 
 # Vào aistudio.google.com để lấy key
-GEMINI_API_KEY= #AIzaSyDZ4t8ynVWWx5rSZc4SvY6HgEuI2RfL-6Y
+GEMINI_API_KEY= AIzaSyCmah29xIRxwEAhpvoGEdunR36IdPrDMvU
